--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+
+  <!-- SYSTEM CSS LINK NEVER REMOVE -->
+  <link rel="stylesheet" href="/src/container.css">
+
+  <!-- Your beaytiful new app title! -->
+  <title>DaveKit</title>
 </head>
 <body>
 
+  <div class="triangle_container">
+    <div class="triangle"></div>
+  </div>
+  <h1>Welcome @ DaveKit!</h1>
+
+
+
+  <!-- SYSTEM JS DONT REMOVE THIS PART!!! -->
+  <script src="/js/models.js"></script>
+  <script src="/js/functions.js"></script>
+  <script src="/js/core.js"></script>
+  <!-- SYSTEM JS DONT TOUCH!! -->
 </body>
 </html>
