--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 
 
+  <!-- JQuery -->
+  <script src="/lib/jquery.min.js"></script>
+
+  <!-- Phaser 3 Library -->
+  <script src="/lib/phaser.min.js"></script>
+
   <!-- SYSTEM JS DONT REMOVE THIS PART!!! -->
   <script src="/js/models.js"></script>
   <script src="/js/functions.js"></script>
