--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 
   <!-- SYSTEM CSS LINK NEVER REMOVE -->
-  <link rel="stylesheet" href="/src/container.css">
+  <link rel="stylesheet" href="src/container.css">
 
   <!-- Your beaytiful new app title! -->
   <title>DaveKit</title>
@@ -19,15 +19,15 @@
 
 
   <!-- JQuery -->
-  <script src="/lib/jquery.min.js"></script>
+  <script src="lib/jquery.min.js"></script>
 
   <!-- Phaser 3 Library -->
-  <script src="/lib/phaser.min.js"></script>
+  <script src="lib/phaser.min.js"></script>
 
   <!-- SYSTEM JS DONT REMOVE THIS PART!!! -->
-  <script src="/js/models.js"></script>
-  <script src="/js/functions.js"></script>
-  <script src="/js/core.js"></script>
+  <script src="js/models.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/core.js"></script>
   <!-- SYSTEM JS DONT TOUCH!! -->
 </body>
 </html>
