--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 </head>
 <body>
 
-  <div class="triangle_container">
-    <div class="triangle"></div>
+  <div class="Taijitu"></div>
+
+
+ <!-- Hidden message -->
+  <div class="hidden_message">
+    <p>Welcome to DaveKit!</p>
   </div>
-  <h1>Welcome @ DaveKit!</h1>
 
   <!-- SYSTEM JS DONT REMOVE THIS PART!!! -->
+  <script src="lib/jquery.min.js"></script>
   <script src="js/models.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/core.js"></script>
